--- a/styles.css
+++ b/styles.css
@@ -77,8 +77,42 @@ body {
     opacity: 0.7;
 }
 
+/* Skills section */
 
+.section-skills {
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+}
 
+.section-skills h2 {
+  text-align: center;
+  font-size: 4rem;
+}
+
+.skills-row {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+}
+
+.skills-card {
+  position: relative;
+  display: block;
+  width: 10rem;
+  margin: 1rem;
+}
+
+.skills-card img {
+  width: 100%;
+}
+
+.skills-card p {
+  margin: 0;
+  padding: 0;
+  text-align: center;
+  font-size: 2rem;
+}
 
 @media screen and (max-width: 1200px) {
     html {
