--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,10 @@ body {
     height: 100%;
 }
 
+#fp-nav {
+  color: white;
+}
+
 /* Home section */
 
 .section-home {
@@ -188,13 +192,13 @@ body {
   display: flex;
   flex-direction: column;
   align-content: center;
+  justify-self: center;
 }
 
 .section-research h1 {
   width: 100%;
   font-size: 4rem;
   text-align: center;
-  margin-bottom: 5rem;
 }
 
 .research-acc-column {
@@ -231,6 +235,86 @@ body {
   padding: 0;
   text-align: center;
   font-size: 2.5rem;
+}
+
+.first-paper {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.first-paper a{
+  position: relative;
+  margin: 0;
+  padding: 0;
+  color: black;
+  font-size: 2.5rem;
+  background-color: lightyellow;
+  padding: 1rem;
+  border-radius: 5px;
+  margin: 0 auto;
+}
+
+.first-paper a:hover{
+  box-shadow: 4px 4px 4px #888888;
+}
+
+/* Contact section */
+
+.section-contact {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-self: center;
+  text-align: center;
+}
+
+.section-contact h1 {
+  color: white;
+  font-size: 4rem;
+}
+
+.contact-items a {
+  font-size: 4rem;
+  color: white;
+  margin-right: 25px;
+}
+
+.contact-items a:hover {
+  opacity: 0.7;
+}
+
+.copyright {
+  width: 100%;
+  bottom: 0;
+}
+
+.copyright hr {
+  background-color: pink;
+  height: 1px;
+  border: 0;
+  width: 100%;
+  margin-top: 50px;
+}
+
+.copyright p {
+  color: white;
+  font-size: 2rem;
+}
+
+.contact-fork {
+  color: white;
+  font-size: 3rem;
+}
+
+.contact-fork a {
+  color: bisque;
+}
+
+.contact-fork a:hover {
+  opacity: 0.7;
 }
 
 @media screen and (max-width: 1200px) {
