--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,7 @@ body {
 }
 
 #menu li a {
-  font-size: 3rem;
+  font-size: 2rem;
   display: block;
   color: whitesmoke;
   text-align: center;
@@ -76,13 +76,13 @@ body {
 }
 
 .section-home h1 {
-    font-size: 10rem;
+    font-size: 7rem;
     color: mintcream;
     text-align: center;
 }
 
 .section-home h3 {
-    font-size: 3rem;
+    font-size: 2.5rem;
     color: paleturquoise;
     text-align: center;
 }
@@ -100,7 +100,7 @@ body {
 }
 
 .section-about p {
-    font-size: 3rem;
+    font-size: 2.5rem;
     text-align: justify;
     margin: 0;
 }
@@ -123,7 +123,7 @@ body {
 
 .section-skills h2 {
   text-align: center;
-  font-size: 4rem;
+  font-size: 3rem;
   margin-bottom: 1.5rem;
 }
 
@@ -146,8 +146,8 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  width: 10rem;
-  height: 14rem;
+  width: 7rem;
+  height: 10rem;
   margin: 1rem;
 }
 
@@ -159,7 +159,7 @@ body {
   margin: 0;
   padding: 0;
   text-align: center;
-  font-size: 2rem;
+  font-size: 1.5rem;
   width: 100%;
   
 }
@@ -174,7 +174,7 @@ body {
 
 .section-projects h1 {
   width: 100%;
-  font-size: 4rem;
+  font-size: 3rem;
   text-align: center;
   margin-bottom: 5rem;
 }
@@ -183,6 +183,7 @@ body {
   width: 80%;
   margin: 0 auto;
   display: flex;
+  flex-direction: row;
   flex-wrap: wrap;
   flex-direction: row;
   justify-content: center;
@@ -199,8 +200,8 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  width: 20rem;
-  height: 25rem;
+  width: 15rem;
+  height: 20rem;
   margin: 1rem;
   padding: 2rem;
   border-radius: 10px;
@@ -215,7 +216,7 @@ body {
   margin: 0;
   padding: 0;
   text-align: center;
-  font-size: 2.5rem;
+  font-size: 2rem;
 }
 
 /* Research section */
@@ -229,7 +230,7 @@ body {
 
 .section-research h1 {
   width: 100%;
-  font-size: 4rem;
+  font-size: 3rem;
   text-align: center;
 }
 
@@ -252,8 +253,8 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  width: 20rem;
-  height: 25rem;
+  width: 15rem;
+  height: 20rem;
   margin: 1rem;
   padding: 2rem;
 }
@@ -266,7 +267,7 @@ body {
   margin: 0;
   padding: 0;
   text-align: center;
-  font-size: 2.5rem;
+  font-size: 2rem;
 }
 
 .first-paper {
@@ -282,9 +283,9 @@ body {
   margin: 0;
   padding: 0;
   color: black;
-  font-size: 2.5rem;
+  font-size: 2rem;
   background-color: lightyellow;
-  padding: 1rem;
+  padding: 0.5rem;
   border-radius: 5px;
   margin: 0 auto;
 }
@@ -305,35 +306,26 @@ body {
 
 .section-contact h1 {
   color: white;
-  font-size: 4rem;
+  font-size: 3rem;
   font-weight: normal;
   margin-bottom: 10px;
 }
 
 .contact-items a {
-  font-size: 4rem;
+  font-size: 3rem;
   color: white;
   margin-right: 25px;
+  font-weight: normal;
 }
 
 .contact-items a:hover {
   opacity: 0.7;
 }
 
-.copyright {
-  width: 100%;
-  bottom: 0;
-}
-
-.copyright p {
+.contact-fork {
+  margin-top: 2rem;
   color: white;
   font-size: 2rem;
-}
-
-.contact-fork {
-  margin-top: 10px;;
-  color: white;
-  font-size: 3rem;
   margin-bottom: 20px;
 }
 
@@ -343,12 +335,6 @@ body {
 
 .contact-fork a:hover {
   opacity: 0.7;
-}
-
-@media screen and (max-width: 4000px) {
-  html {
-    font-size: 62.5%;
-  }
 }
 
 @media screen and (max-width: 1200px) {
@@ -369,14 +355,21 @@ body {
     }
   }
   
-  @media screen and (max-width: 600px) {
+  @media screen and (max-width: 450px) {
     html {
       font-size: 28%;
+    }
+
+    #menu li a {
+      font-size: 3rem;
     }
 
     .section-about p {
       font-size: 4rem;
     }
 
+    .projects-column {
+      flex-direction: column;
+    }
   }
   
