--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,10 @@ a {
 
 body {
     background-color: rgba(28, 28, 28, 1);
+    background-image: url('./assets/background.jpg');
+    background-repeat: no-repeat;
+    background-position: 50% 0;
+    background-size: cover;
     color: white;
     height: 100vh;
     width: 100vw;
@@ -366,6 +370,10 @@ body {
 
     .section-about p {
       font-size: 4rem;
+    }
+
+    .skills-column {
+      flex-direction: column;
     }
 
     .projects-column {
