--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 :root {
     --dark-gray: #222;
+    --blue: rgba(108, 99, 255, 1);
 }
 
 html {
@@ -60,18 +61,131 @@ body {
 }
 
 .navbar-container li:hover {
-    background-color: rgba(108, 99, 255, 1);
+    background-color: var(--blue);
 }
 
 .home-container {
-    position: relative;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
     height: 100vh;
 }
 
+.home-text {
+    color: white;
+}
+
+.home-text h1 {
+    font-size: 60px;
+    font-weight: 500;
+    margin-bottom: 10px;
+}
+
+.home-text h2 {
+    font-size: 28px;
+    font-weight: 400;
+    margin-bottom: 10px;
+}
+
+.home-socials {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    margin: 20px 0px;
+}
+
+.home-socials a{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 5px;
+    width: 40px;
+    height: 40px;
+    font-size: 30px;
+    margin-right: 15px;
+    transition: all 0.1s ease-in-out;
+    border-radius: 50%;
+}
+
+.home-socials a:hover{
+    background-color: rgba(255, 255, 255, 0.3);
+}
+
+.buttons {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-start;
+}
+
+.buttons button {
+    font-size: 14px;
+    height: 40px;
+    width: 150px;
+    padding: 10px;
+    border-radius: 5px;
+    background-color: var(--blue);
+    border: 2px solid var(--blue);
+    transition: all 0.25s ease-in-out;
+    color: white;
+    margin-right: 10px;
+}
+
+.buttons button:hover {
+    cursor: pointer;
+    background-color: black;
+}
+
 .home-container img {
-    width: 100%;
-    max-height: 80%;
-    position: absolute;
-    bottom: 0;
-    right: 0;
+    width: 50%;
+}
+
+.about-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+}
+
+@media screen and (max-width: 1000px) {
+    .home-container img {
+        display: none;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    .home-text {
+        margin-bottom: 20px;
+    }
+
+    .home-text h1 {
+        font-size: 40px;
+    }
+    
+    .home-text h2 {
+        font-size: 20px;
+    }
+
+    .home-socials a{
+        padding: 4px;
+        width: 30px;
+        height: 30px;
+        font-size: 20px;
+        margin-right: 10px;
+    }
+
+    .buttons button {
+        font-size: 10px;
+        height: 30px;
+        width: 110px;
+        padding: 5px;
+        border-radius: 5px;
+        background-color: var(--blue);
+        border: 2px solid var(--blue);
+        transition: all 0.25s ease-in-out;
+        color: white;
+        margin-right: 10px;
+    }
 }
