--- a/style.css
+++ b/style.css
@@ -155,6 +155,51 @@ body {
     width: 50%;
 }
 
+/* About section */
+
+.about-container {
+    min-height: 100vh;
+    background-color: rgb(14, 14, 14);
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
+.about-image {
+    width: 40%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.about-image img {
+    width: 80%;
+    border-radius: 50%;
+}
+
+.about-main {
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.about-main h1 {
+    font-weight: 400;
+    font-size: 30px;
+    text-align: center;
+    margin-bottom: 10px;
+    width: 90%;
+}
+
+.about-main p {
+    font-weight: 300;
+    font-size: 20px;
+    width: 90%;
+}
+
 /* Skills Section */
 
 .skills-container {
@@ -163,12 +208,10 @@ body {
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    background-color: rgb(14, 14, 14);
 }
 
-.nimish-svg {
+.skills-svg {
     width: 30%;
-    border-radius: 50%;
 }
 
 .skills-main {
@@ -205,7 +248,7 @@ body {
 .skill-card p {
     font-size: 15px;
     text-align: center;
-    margin-bottom: 10px;
+    margin-top: 10px;
 }
 
 .skill-card img {
@@ -222,8 +265,8 @@ body {
     }
 }
 
-@media screen and (max-width: 700px) {
-    .nimish-svg {
+@media screen and (max-width: 800px) {
+    .skills-svg {
         display: none;
     }
 
