--- a/style.css
+++ b/style.css
@@ -4,6 +4,9 @@
     --white1: white;
     --white2: rgb(230, 230, 230);
     --blue: rgba(108, 99, 255, 1);
+    --navbar-light: rgba(118, 142, 252, 0.5);
+    --navbar-dark: rgba(108, 99, 255, 0.5);
+    --navbar: var(--navbar-dark);
     --background1: var(--black1);
     --background2: var(--black2);
     --text: var(--white1);
@@ -52,7 +55,7 @@ body {
     height: 40px;
     position: fixed;
     z-index: 5;
-    background-color: rgba(34, 34, 34, 0.5);
+    background: var(--navbar);
     -webkit-backdrop-filter: blur(10px);
     backdrop-filter: blur(10px);
     display: flex;
@@ -115,9 +118,9 @@ body {
     min-height: 100vh;
 }
 
-.home-text {
+/* .home-text {
     
-}
+} */
 
 .home-text h1 {
     font-size: 60px;
@@ -171,13 +174,14 @@ body {
     background-color: var(--blue);
     border: 2px solid var(--blue);
     transition: all 0.25s ease-in-out;
-    color: white;
+    color: var(--white1);
     margin-right: 10px;
 }
 
 .buttons button:hover {
     cursor: pointer;
-    background-color: var(--background1);
+    background-color: transparent;
+    color: var(--text);
 }
 
 .home-container img {
@@ -315,6 +319,88 @@ body {
 .projects-container {
     min-height: 100vh;
     background-color: var(--background2);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.projects-container h1 {
+    font-weight: 400;
+    font-size: 30px;
+    text-align: center;
+    margin: 15px;
+}
+
+#all-projects {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-bottom: 30px;
+}
+
+.project-card {
+    position: relative;
+    width: 300px;
+    height: 400px;
+    border: 2px solid var(--text);
+    background-color: var(--background1);
+    margin: 10px;
+    padding: 10px;
+    transition: all 0.25s ease-in-out;
+}
+
+.project-card:hover {
+    border-color: var(--blue);
+}
+
+.project-card img {
+    width: 100%;
+    height: 50%;
+    object-fit: cover;
+}
+
+.project-card h2 {
+    font-size: 24px;
+    text-align: center;
+    margin: 10px 0px;
+}
+
+.project-card p {
+    font-size: 18px;
+    margin-bottom: 10px;
+}
+
+.project-buttons {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    position: absolute;
+    right: 50%;
+    transform: translateX(50%);
+    bottom: 10px;
+}
+
+.project-buttons a {
+    width: 100px;
+    height: 20px;
+    padding: 5px;
+    text-align: center;
+    font-size: 18px;
+    border: 2px solid var(--blue);
+    border-radius: 10px;
+    background-color: var(--blue);
+    color: var(--white1);
+    margin: 5px;
+    transition: all 0.25s ease-in-out;
+}
+
+.project-buttons a:hover {
+    background-color: transparent;
+    color: var(--text);
 }
 
 /* Research Section */
@@ -366,7 +452,7 @@ body {
         position: fixed;
         list-style-type: none;
         z-index: 5;
-        background-color: rgba(34, 34, 34, 0.5);
+        background-color: var(--navbar);
         -webkit-backdrop-filter: blur(10px);
         backdrop-filter: blur(10px);
         right: -200px;
