--- a/style.css
+++ b/style.css
@@ -406,7 +406,100 @@ body {
 /* Research Section */
 
 .research-container {
-    min-height: 100vh;
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: center;
+}
+
+.research-profiles {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 50%;
+    margin: 50px 0px;
+    align-self: flex-start;
+}
+
+.research-profiles h1 {
+    font-weight: 400;
+    font-size: 30px;
+    text-align: center;
+    margin: 15px;
+}
+
+#all-research-profiles {
+    width: 90%;
+}
+
+#all-research-profiles a {
+    width: 100%;
+    margin-bottom: 10px;
+}
+
+.research-papers {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 50%;
+    align-self: center;
+    height: 100%;
+    margin: 50px 0px;
+    align-self: flex-start;
+}
+
+.research-papers h1 {
+    font-weight: 400;
+    font-size: 30px;
+    text-align: center;
+    margin: 15px;
+}
+
+#all-research-papers {
+    width: 90%;
+}
+
+#all-research-papers a {
+    width: 100%;
+    margin-bottom: 10px;
+}
+
+.research-card {
+    background-color: var(--text);
+    color: var(--background1);
+    border: 2px solid var(--text);
+    min-height: 40px;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    transition: all 0.25s ease-in-out;
+    border-radius: 5px;
+    margin-bottom: 15px;
+}
+
+.fa-angle-right {
+    color: white;
+}
+
+.research-card:hover {
+    color: var(--text);
+    background-color: transparent;
+}
+
+.research-card i {
+    font-size: 30px;
+    margin: 5px;
+    width: 5%;
+    text-align: center;
+}
+
+.research-card p {
+    width: 95%;
+    text-align: center;
+    font-size: 16px;
+    padding: 5px 10px;
 }
 
 /* Contact Section */
@@ -504,6 +597,14 @@ body {
     }
 
     .about-main {
+        width: 100%;
+    }
+
+    .research-container {
+        flex-direction: column;
+    }
+
+    .research-profiles, .research-papers {
         width: 100%;
     }
 }
