--- a/style.css
+++ b/style.css
@@ -38,22 +38,18 @@ body {
 }
 
 ::-webkit-scrollbar {
-    background: rgb(39, 39, 39);
+    background: var(--navbar);
     width: 10px;
 }
 
 ::-webkit-scrollbar-thumb {
-    background: rgb(61, 61, 61);
+    background: var(--blue);
     border-radius: 5px;
-}
-
-::-webkit-scrollbar-thumb:hover {
-    background: rgb(99, 99, 99);
 }
 
 .navbar-container {
     width: 100%;
-    height: 40px;
+    height: 60px;
     position: fixed;
     z-index: 5;
     background: var(--navbar);
@@ -69,13 +65,18 @@ body {
     display: block;
     background-color: transparent;
     border: none;
+    border-radius: 50%;
     color: var(--text);
-    padding: 10px 20px;
+    width: 30px;
+    height: 30px;
+    padding: 5px;
+    margin: 5px 15px;
     transition: all 0.25s;
 }
 
 #dark-mode-switch:hover {
     cursor: pointer;
+    background-color: rgba(255, 255, 255, 0.3);
 }
 
 .desktop-navbar {
@@ -95,14 +96,17 @@ body {
 .nav-title {
     position: absolute;
     left: 0;
-    font-size: 20px;
-    padding: 0px 15px;
+    font-size: 24px;
+    padding-left: 20px;
+    font-weight: 600;
 }
 
 .desktop-navbar li {
-    padding: 10px;
+    padding: 10px 20px;
+    margin: 5px;
     font-size: 16px;
     transition: all 0.25s ease-in-out;
+    border-radius: 5px;
 }
 
 .desktop-navbar li:hover {
@@ -330,7 +334,8 @@ body {
     font-weight: 400;
     font-size: 30px;
     text-align: center;
-    margin: 50px 0px;
+    margin-top: 70px;
+    margin-bottom: 40px;
 }
 
 #all-projects {
@@ -419,7 +424,7 @@ body {
     flex-direction: column;
     align-items: center;
     width: 50%;
-    margin: 50px 0px;
+    margin: 60px 0px;
     align-self: flex-start;
 }
 
@@ -446,7 +451,7 @@ body {
     width: 50%;
     align-self: center;
     height: 100%;
-    margin: 50px 0px;
+    margin: 60px 0px;
     align-self: flex-start;
 }
 
@@ -521,7 +526,7 @@ body {
     align-items: flex-start;
     justify-content: center;
     width: 40%;
-    margin: 50px 0px;
+    margin: 60px 0px;
 }
 
 .connect h1 {
@@ -561,7 +566,7 @@ body {
     align-items: flex-start;
     justify-content: center;
     width: 50%;
-    margin: 50px 0px;
+    margin: 60px 0px;
 }
 
 .say-hi h1 {
@@ -634,7 +639,7 @@ footer h3{
 
 #notification {
     position: fixed;
-    top: 50px;
+    top: 60px;
     right: 5px;
     z-index: 10;
     width: 200px;
@@ -657,7 +662,7 @@ footer h3{
     }
 }
 
-@media screen and (max-width: 850px) {
+@media screen and (max-width: 990px) {
     .navbar-container ul {
         display: none;
     }
@@ -702,6 +707,10 @@ footer h3{
     
     .mobile-navbar button:hover {
         cursor: pointer;
+    }
+
+    .mobile-navbar a {
+        width: 100%;
     }
 
     .mobile-navbar li {
