--- a/style.css
+++ b/style.css
@@ -137,6 +137,7 @@ body {
     align-items: center;
     justify-content: center;
     min-height: 100vh;
+    position: relative;
 }
 
 /* .home-text {
@@ -207,6 +208,26 @@ body {
 
 .home-container img {
     width: 50%;
+}
+
+.home-container .home-down-arrow {
+    position: absolute;
+    bottom: 100px;
+    font-size: 20px;
+    color: rgba(245, 245, 245, 0.8);
+    cursor: pointer;animation: bounce 0.5s;
+    animation-direction: alternate;
+    animation-timing-function: cubic-bezier(.5, 0.05, 1, .5);
+    animation-iteration-count: infinite;
+}
+@keyframes bounce {
+    from {
+        transform: translate3d(0, 0, 0);
+    }
+
+    to {
+        transform: translate3d(0, 3px, 0);
+    }
 }
 
 /* About section */
@@ -346,6 +367,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    padding: 0 100px;
 }
 
 .projects-container h1 {
@@ -743,6 +765,10 @@ footer h3 {
 
     .mobile-navbar li:hover {
         background-color: var(--blue);
+    }
+
+    .projects-container {
+        padding: 0 10px;
     }
 }
 
